--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "netlify-lambda serve functions",
+    "build": "netlify-lambda build functions"
   },
   "dependencies": {
-    "next": "9.3.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
+    "mongoose": "5.9.6",
+    "serverless-http": "^2.3.2"
+  },
+  "devDependencies": {
+    "netlify-lambda": "1.6.3",
+    "prettier": "2.0.2"
   }
 }
