--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "mongodb": "^3.5.5",
-    "mongodb-client-encryption": "^1.0.1",
-    "mongoose": "5.9.6",
-    "serverless-http": "^2.3.2"
+    "mongodb": "3.5.5",
+    "mongodb-client-encryption": "1.0.1",
+    "serverless-http": "2.3.2"
   },
   "devDependencies": {
     "netlify-lambda": "1.6.3",
