--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "body-parser": "1.19.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
-    "mongodb": "3.5.5",
     "mongodb-client-encryption": "1.0.1",
-    "save": "^2.4.0",
+    "mongoose": "5.9.7",
+    "save": "2.4.0",
     "serverless-http": "2.3.2"
   },
   "devDependencies": {
