--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "build": "netlify-lambda build functions"
   },
   "dependencies": {
-    "bcrypt": "4.0.1",
-    "body-parser": "1.19.0",
-    "cookie-parser": "1.4.5",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "mongodb-client-encryption": "1.0.1",
-    "mongoose": "5.9.7",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0",
-    "save": "2.4.0",
-    "serverless-http": "2.3.2"
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb-client-encryption": "^1.0.1",
+    "mongoose": "^5.9.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "serverless-http": "^2.3.2"
   },
   "devDependencies": {
     "netlify-lambda": "1.6.3",
