--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongodb-client-encryption": "^1.0.1",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
