--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "await-to-js": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -18,6 +19,7 @@
     "mongodb-client-encryption": "^1.0.1",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "serverless-http": "^2.3.2"
   },
