--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "netlify-lambda serve functions",
-    "build": "netlify-lambda build functions"
+    "clean": "rm -rf dist",
+    "build:tsc": "npm run clean && ttsc",
+    "start": "npm run build:tsc && netlify-lambda serve dist/functions",
+    "build": "npm run build:tsc && netlify-lambda build dist/functions",
+    "watch": "nodemon"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "await-to-js": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
     "mongodb-client-encryption": "^1.0.1",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
@@ -24,7 +25,21 @@
     "serverless-http": "^2.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^16.0.12",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongoose": "^5.7.10",
+    "@types/node": "^13.11.1",
+    "@types/passport": "^1.0.3",
+    "@types/passport-facebook": "^2.1.9",
+    "@types/passport-jwt": "^3.0.3",
     "netlify-lambda": "1.6.3",
-    "prettier": "2.0.2"
+    "nodemon": "^2.0.3",
+    "prettier": "2.0.2",
+    "ttypescript": "^1.5.10",
+    "typescript": "^3.8.3",
+    "typescript-transform-paths": "^1.1.14"
   }
 }
