--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -29,3 +30,5 @@ yarn-error.log*
 # env
 .env*
 !.env.template
+# Local Netlify folder
+.netlify
