--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:tsc": "npm run clean && ttsc",
     "start": "npm run build:tsc && netlify-lambda serve dist/functions",
     "build": "npm run build:tsc && netlify-lambda build dist/functions",
-    "watch": "nodemon"
+    "watch": "nodemon",
+    "test": "jest --config-jest.config.js --runInBand"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -30,15 +31,23 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^16.0.12",
+    "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^13.11.1",
     "@types/passport": "^1.0.3",
     "@types/passport-facebook": "^2.1.9",
     "@types/passport-jwt": "^3.0.3",
+    "@types/sinon": "^9.0.0",
+    "@types/supertest": "^2.0.8",
+    "jest": "^25.5.2",
     "netlify-lambda": "1.6.3",
+    "node-mocks-http": "^1.8.1",
     "nodemon": "^2.0.3",
     "prettier": "2.0.2",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.4.0",
     "ttypescript": "^1.5.10",
     "typescript": "^3.8.3",
     "typescript-transform-paths": "^1.1.14"
