--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/faker": "^4.1.11",
     "@types/hapi__joi": "^16.0.12",
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
@@ -40,6 +41,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/sinon": "^9.0.0",
     "@types/supertest": "^2.0.8",
+    "faker": "^4.1.0",
     "jest": "^25.5.2",
     "netlify-lambda": "1.6.3",
     "node-mocks-http": "^1.8.1",
