--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "serverless-http": "^2.3.2"
   },
@@ -38,6 +39,7 @@
     "@types/node": "^13.11.1",
     "@types/passport": "^1.0.3",
     "@types/passport-facebook": "^2.1.9",
+    "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-jwt": "^3.0.3",
     "@types/sinon": "^9.0.0",
     "@types/supertest": "^2.0.8",
